fix: :fire: eliminando code Innecesario